Fix spacing in profile editor buttons

--- a/ESSArch_TP/frontend/static/frontend/styles/modules/index.scss
+++ b/ESSArch_TP/frontend/static/frontend/styles/modules/index.scss
@@ -417,7 +417,7 @@ body.modal-open[style] {
 .flex-row {
     display: flex;
     flex-direction: row;
-    * {
+    > * {
         margin-right: 3px;
     }
 }
